--- a/style.css
+++ b/style.css
@@ -1,45 +1,172 @@
+/* Container Layout */
 .grid-container {
     background: white;
-    max-width: 2000px;
+    max-width: 1200px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 120px 150px 100px 450px 150px 100px 450px 150px 450px 150px 100px 450px 150px 50px;
+    margin: 10px auto;
+    gap: 10px;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
+/* General Styles */
 .grid-container > div {
-    background: white;
     text-align: center;
-    padding: 20px;
-    border: 1px solid white;
+    padding: 15px;
+    border: 2px solid #1a273f;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
+/* Grid Items */
 .grid-container > div:nth-child(1) {
     grid-column: span 4;
+    background: #1a273f;
+    color: white;
 }
 
 .grid-container > div:nth-child(2) {
-    grid-column: span 3;
+    grid-column: span 4;
+    background: lightgrey;
+    color: black;
 }
 
 .grid-container > div:nth-child(3) {
-    grid-column: span 1;
+    grid-column: span 4;
+    background: #315e91;
+    color: white;
 }
 
 .grid-container > div:nth-child(4) {
-    grid-column: 2 / span 6;
+    grid-column: span 2;
+    background: white;
 }
 
 .grid-container > div:nth-child(5) {
-    grid-column: span 4;
+    grid-column: span 2;
+    background: white;
 }
 
 .grid-container > div:nth-child(6) {
-    grid-column: span 1;
+    grid-column: span 2;
+    background: lightgrey;
+    color: black;
 }
 
 .grid-container > div:nth-child(7) {
-    grid-column: span ;
+    grid-column: span 2;
+    background: lightgrey;
+    color: black;
 }
 
 .grid-container > div:nth-child(8) {
+    grid-column: span 4;
+    background: #315e91;
+    color: white;
+    
+}
+
+.grid-container > div:nth-child(9) {
     grid-column: span 2;
+    background: white;
+}
+
+.grid-container > div:nth-child(10) {
+    grid-column: span 2;
+    background: white;
+}
+
+.grid-container > div:nth-child(11) {
+    grid-column: span 2;
+    background: lightgrey;
+    color: black;
+}
+
+.grid-container > div:nth-child(12) {
+    grid-column: span 2;
+    background: lightgrey;
+    color: black;
+}
+
+.grid-container > div:nth-child(13) {
+    grid-column: span 4;
+    background: white;
+}
+
+.grid-container > div:nth-child(14) {
+    grid-column: span 4;
+    background: lightgrey;
+    color: black;
+}
+
+.grid-container > div:nth-child(15) {
+    grid-column: span 4;
+    background: #315e91;
+    color: white;
+}
+
+.grid-container > div:nth-child(16) {
+    grid-column: span 2;
+    background: white;
+}
+
+.grid-container > div:nth-child(17) {
+    grid-column: span 2;
+    background: white;
+}
+
+.grid-container > div:nth-child(18) {
+    grid-column: span 2;
+    background: lightgrey;
+    color: black;
+}
+
+.grid-container > div:nth-child(19) {
+    grid-column: span 2;
+    background: lightgrey;
+    color: black;
+}
+
+.grid-container > div:nth-child(20) {
+    grid-column: span 4;
+    background: #1a273f;
+    color: white;
+}
+
+/* Defining Styles */
+.title {
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+}
+
+.subtitle {
+    font-size: 12px;
+    font-style: italic;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.section-header {
+    font-size: 24px;
+    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+    color: black;
+}
+
+.description {
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
+    color: #333;
+}
+
+.footer {
+    font-size: 10px;
+    font-family: 'Roboto', sans-serif;
+    color: #999;
 }
