--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Container Layout */
 .grid-container {
     background: white;
-    max-width: 1200px;
+    max-width: 1400px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 120px 150px 100px 450px 150px 100px 450px 150px 450px 150px 100px 450px 150px 50px;
+    grid-template-rows: 120px 160px 100px 450px 210px 100px 450px 210px 450px 160px 100px 450px 210px 50px;
     margin: 10px auto;
     gap: 10px;
     justify-items: stretch;
@@ -32,7 +32,7 @@
 
 .grid-container > div:nth-child(2) {
     grid-column: span 4;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
@@ -54,13 +54,13 @@
 
 .grid-container > div:nth-child(6) {
     grid-column: span 2;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
 .grid-container > div:nth-child(7) {
     grid-column: span 2;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
@@ -83,13 +83,13 @@
 
 .grid-container > div:nth-child(11) {
     grid-column: span 2;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
 .grid-container > div:nth-child(12) {
     grid-column: span 2;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
@@ -100,7 +100,7 @@
 
 .grid-container > div:nth-child(14) {
     grid-column: span 4;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
@@ -122,13 +122,13 @@
 
 .grid-container > div:nth-child(18) {
     grid-column: span 2;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
 .grid-container > div:nth-child(19) {
     grid-column: span 2;
-    background: lightgrey;
+    background: #e3e2e2;
     color: black;
 }
 
@@ -159,7 +159,7 @@
 }
 
 .description {
-    font-size: 16px;
+    font-size: 18px;
     font-family: 'Roboto', sans-serif;
     text-align: left;
     color: #333;
