--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     max-width: 1350px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 120px 160px 100px 450px 210px 100px 450px 210px 450px 160px 100px 450px 210px 50px;
+    grid-template-rows: 120px 160px 100px 450px 200px 100px 450px 200px 450px 160px 100px 450px 200px 50px;
     margin: 10px auto;
     gap: 10px;
     justify-items: stretch;
@@ -32,7 +32,7 @@
 
 .grid-container > div:nth-child(2) {
     grid-column: span 4;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
@@ -54,13 +54,13 @@
 
 .grid-container > div:nth-child(6) {
     grid-column: span 2;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
 .grid-container > div:nth-child(7) {
     grid-column: span 2;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
@@ -83,13 +83,13 @@
 
 .grid-container > div:nth-child(11) {
     grid-column: span 2;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
 .grid-container > div:nth-child(12) {
     grid-column: span 2;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
@@ -100,7 +100,7 @@
 
 .grid-container > div:nth-child(14) {
     grid-column: span 4;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
@@ -122,13 +122,13 @@
 
 .grid-container > div:nth-child(18) {
     grid-column: span 2;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
 .grid-container > div:nth-child(19) {
     grid-column: span 2;
-    background: #e3e2e2;
+    background: #dbdbdb;
     color: black;
 }
 
